--- a/application/flicket/templates/flicket_index.html
+++ b/application/flicket/templates/flicket_index.html
@@ -10,7 +10,7 @@
             <div class="col">
                 <div class="row">
                     <div class="col text-center">
-                        <h1 class=>{{ _('Abrir Tickets de Alta Prioridad') }}</h1>
+                        <h1 class=>{{ _('Tickets de Alta Prioridad Abiertos') }}</h1>
                     </div>
 
 
