--- a/application/flicket_admin/templates/admin_menu.html
+++ b/application/flicket_admin/templates/admin_menu.html
@@ -4,27 +4,27 @@
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('admin_bp.index') }}">
-                {{ _('Admin Home') }}
+                {{ _('Inicio') }}
             </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('admin_bp.config') }}">
-                {{ _('Flicket Config') }}
+                {{ _('Configuración') }}
             </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('admin_bp.users') }}">
-                {{ _('Users') }}
+                {{ _('Usuarios') }}
             </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('admin_bp.add_user') }}">
-                {{ _('Add User') }}
+                {{ _('Añadir Usuario') }}
             </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('admin_bp.groups') }}">
-                {{ _('Groups') }}
+                {{ _('Grupos') }}
             </a>
         </li>
     </ul>
