--- a/application/flicket_admin/templates/admin_config.html
+++ b/application/flicket_admin/templates/admin_config.html
@@ -10,7 +10,7 @@
             <div class="col">
                 <div class="row">
                     <div class="col">
-                        <h2 class="text-center">{{ _('Configuration') }}</h2>
+                        <h2 class="text-center">{{ _('Configuración') }}</h2>
                     </div>
                 </div>
 
@@ -21,10 +21,10 @@
                             {{ form.hidden_tag() }}
                             <div class="row p-2">
                                 <div class="col-3 text-lg">
-                                    {{ _('Field') }}
+                                    {{ _('Campo') }}
                                 </div>
                                 <div class="col text-lg">
-                                    {{ _('Value') }}
+                                    {{ _('Valor') }}
                                 </div>
                             </div>
                             {% set insert_button = False %}
@@ -58,7 +58,7 @@
                                     <div class="row">
                                         <div class="col offset-3">
                                             <a class="btn btn-info" href="{{ url_for('admin_bp.email_test') }}">Test
-                                                Email</a>
+                                                Correo Electrónico</a>
                                         </div>
                                     </div>
                                 {%- endif -%}
