--- a/application/flicket_admin/templates/admin_delete_group.html
+++ b/application/flicket_admin/templates/admin_delete_group.html
@@ -18,7 +18,7 @@
                     {{ form.id() }}
                     <div class="row">
                         <div class="col text-center">
-                            {{ _('Are you sure you want to delete the group:') }}
+                            {{ _('¿Estás seguro que quieres eliminar el grupo?') }}
                         </div>
                     </div>
                     <div class="row">
@@ -28,7 +28,7 @@
                     </div>
                     <div class="row mb-2">
                         <div class="col text-center">
-                            {{ _('Please enter your password to delete group.') }}
+                            {{ _('Escribe tu contraseña para eliminar el grupo.') }}
                         </div>
                     </div>
                     <div class="row mb-2">
